--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "gatsby": "^2.7.1",
     "gatsby-plugin-page-creator": "^2.0.13",
     "gatsby-plugin-postcss": "^2.0.7",
+    "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
     "nuka-carousel": "^4.5.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-slick": "^0.24.0",
+    "react-typography": "^0.16.19",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^1.0.1"
+    "tailwindcss": "^1.0.1",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
