--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "gatsby": "^2.7.1",
+    "gatsby-image": "^2.1.2",
     "gatsby-plugin-page-creator": "^2.0.13",
     "gatsby-plugin-postcss": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
+    "gatsby-transformer-sharp": "^2.1.21",
     "nuka-carousel": "^4.5.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
