--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuka-carousel": "^4.5.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-slick": "^0.24.0",
     "react-typography": "^0.16.19",
     "slick-carousel": "^1.8.1",
