--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-sharp": "^2.1.21",
     "nuka-carousel": "^4.5.8",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.20.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
