--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "gatsby": "^2.7.1",
     "gatsby-image": "^2.1.2",
+    "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-page-creator": "^2.0.13",
     "gatsby-plugin-postcss": "^2.0.7",
+    "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
