--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 API_KEY=MC5YT3RnOVJFQUFCOEFWRlFL.77-9d--_ve-_vRTvv73vv73vv73vv73vv71j77-977-9TC1Ofxjvv70a77-977-9dSwC77-977-9dW7vv71i77-9
+STRIPE_SECRET_KEY=sk_test_4TTwyafuvuTwFkDRFuChf3kk00W0fbyv8N
