--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-plugin-stripe": "^1.2.1",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
+    "gatsby-source-stripe": "^3.0.1",
     "gatsby-transformer-sharp": "^2.1.21",
     "nuka-carousel": "^4.5.8",
     "prop-types": "^15.7.2",
