--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^5.2.1",
     "react-modal": "^3.8.1",
     "react-slick": "^0.24.0",
+    "react-tabs": "^3.0.0",
     "react-typography": "^0.16.19",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^1.0.1",
