--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gatsby": "^2.7.1",
+    "gatsby-background-image": "^0.8.0",
     "gatsby-image": "^2.1.2",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-offline": "^2.2.0",
@@ -26,6 +27,7 @@
     "gatsby-source-sanity": "^5.0.1",
     "gatsby-source-stripe": "^3.0.1",
     "gatsby-transformer-sharp": "^2.1.21",
+    "intersection-observer": "^0.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
