--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.7.1",
     "gatsby-background-image": "^0.8.2",
     "gatsby-image": "^2.1.2",
+    "gatsby-plugin-google-tagmanager": "^2.1.4",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-page-creator": "^2.0.13",
