--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-modal": "^3.8.1",
+    "react-player": "^1.11.1",
     "react-tabs": "^3.0.0",
     "react-tooltip": "^3.10.0",
     "react-typography": "^0.16.19",
