--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-tabs": "^3.0.0",
     "react-tooltip": "^3.10.0",
     "react-typography": "^0.16.19",
+    "smoothscroll-polyfill": "^0.4.4",
     "tailwindcss": "^1.0.1",
     "typography": "^0.16.19"
   },
