--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-plugin-stripe": "^1.2.1",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-sanity": "^5.0.1",
