--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-image": "^2.1.2",
     "gatsby-plugin-google-tagmanager": "^2.1.4",
     "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-plugin-netlify": "^2.1.4",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-page-creator": "^2.0.13",
     "gatsby-plugin-postcss": "^2.0.7",
