--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.6",
     "gatsby": "^2.7.1",
     "gatsby-background-image": "^0.8.2",
     "gatsby-image": "^2.1.2",
