--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "fitness-culture",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Fitness Culture. A personal trainer in your pocket.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -31,7 +31,6 @@
     "gatsby-plugin-stripe": "^1.2.1",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-sanity": "^5.0.1",
-    "gatsby-source-stripe": "^3.0.1",
     "gatsby-transformer-sharp": "^2.1.21",
     "intersection-observer": "^0.7.0",
     "prop-types": "^15.7.2",
