--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.6",
+    "atob": "^2.1.2",
     "gatsby": "^2.7.1",
     "gatsby-background-image": "^0.8.2",
     "gatsby-image": "^2.1.2",
