--- a/fitnessculture-sanity/package.json
+++ b/fitnessculture-sanity/package.json
@@ -14,13 +14,14 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^0.147.6",
-    "@sanity/color-input": "^0.147.0",
-    "@sanity/components": "^0.147.6",
-    "@sanity/core": "^0.147.6",
-    "@sanity/default-layout": "^0.147.6",
-    "@sanity/default-login": "^0.147.0",
-    "@sanity/desk-tool": "^0.147.7",
+    "@sanity/base": "^1.148.3",
+    "@sanity/color-input": "^1.148.1",
+    "@sanity/components": "^1.148.1",
+    "@sanity/core": "^1.148.3",
+    "@sanity/default-layout": "^1.148.4",
+    "@sanity/default-login": "^1.148.1",
+    "@sanity/desk-tool": "^1.148.4",
+    "@sanity/production-preview": "^1.148.1",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2"
